product page with quantity choice, color choice buttons, refactored some colors

--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="150dp"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="@color/primary"
                 android:paddingLeft="20dp"
                 android:paddingTop="14dp"
                 android:paddingRight="20dp"
