--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,10 @@
     <color name="teal_700">#FF018786</color>
 
 
-    <color name="black">#FF000000</color>
+    <color name="primary">#242424</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#606060</color>
-    <color name="light_gray_2">#808080</color>
+    <color name="text_secondary">#808080</color>
     <color name="light_gray_3">#909090</color>
     <color name="light_gray_4">#E0E0E0</color>
     <color name="light_gray_5">#CACCCE</color>
