--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -158,7 +158,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="40dp"
                         android:layout_marginEnd="30dp"
-                        android:backgroundTint="@color/black"
+                        android:backgroundTint="@color/primary"
                         android:paddingTop="14dp"
                         android:paddingBottom="14dp"
                         android:text="@string/login"
