--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
                 android:layout_height="80dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
-                android:background="@color/black"
+                android:background="@color/primary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/ImageViewRounded50" />
