--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -164,7 +164,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="50dp"
                         android:layout_marginEnd="30dp"
-                        android:backgroundTint="@color/black"
+                        android:backgroundTint="@color/primary"
                         android:paddingTop="14dp"
                         android:paddingBottom="14dp"
                         android:text="@string/sign_up"
@@ -182,7 +182,7 @@
                         android:layout_marginBottom="30dp"
                         android:fontFamily="@font/nunito_sans_semibold"
                         android:text="@string/already_have_account"
-                        android:textColor="@color/light_gray_2"
+                        android:textColor="@color/text_secondary"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/tv_signin"
                         app:layout_constraintHorizontal_bias="0.5"
