--- a/app/src/main/res/layout/item_favorites.xml
+++ b/app/src/main/res/layout/item_favorites.xml
@@ -21,7 +21,7 @@
                 android:layout_height="100dp"
                 android:layout_marginVertical="12dp"
                 android:layout_marginStart="20dp"
-                android:background="@color/black"
+                android:background="@color/primary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
