--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/image_notification"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@color/black"
+                android:background="@color/primary"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
