fixed order items layout, filtered tabs by order status. Fixed bottom navigation icon not showing when navigating through inner fragments.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,8 @@
     <color name="light_gray_4">#E0E0E0</color>
     <color name="light_gray_5">#CACCCE</color>
     <color name="font_black">#303030</color>
+    <color name="green">#27AE60</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="red">#F44336</color>
 
 </resources>
