--- a/app/src/main/res/layout/item_my_orders.xml
+++ b/app/src/main/res/layout/item_my_orders.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="5dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginVertical="12dp"
         android:layout_marginHorizontal="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,6 +26,9 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
                 android:text="Order No238562312"
+                android:textSize="16sp"
+                android:fontFamily="@font/nunito_sans_semibold"
+                android:textColor="@color/font_black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,7 +39,9 @@
                 android:layout_marginEnd="15dp"
                 android:text="20/03/2020"
                 app:layout_constraintBaseline_toBaselineOf="@id/order_number"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                android:fontFamily="@font/nunito_sans"
+                android:textSize="14sp"/>
 
             <View
                 android:id="@+id/separator"
@@ -53,6 +58,8 @@
                 android:layout_marginStart="21dp"
                 android:layout_marginTop="15dp"
                 android:text="Quantity:"
+                android:textSize="16sp"
+                android:fontFamily="@font/nunito_sans_semibold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/separator" />
 
@@ -62,6 +69,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="03"
+                android:fontFamily="@font/nunito_sans_bold"
+                android:textColor="@color/font_black"
+                android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/quantity_string"
                 app:layout_constraintStart_toEndOf="@id/quantity_string" />
 
@@ -72,6 +82,8 @@
                 android:layout_marginStart="21dp"
                 android:layout_marginEnd="5dp"
                 android:text="Total Amount:"
+                android:fontFamily="@font/nunito_sans_semibold"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toStartOf="@id/order_total_amount"
                 app:layout_constraintTop_toTopOf="@id/quantity_string" />
 
@@ -80,6 +92,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="13dp"
+                android:textSize="16sp"
+                android:fontFamily="@font/nunito_sans_bold"
+                android:textColor="@color/font_black"
                 android:text="$150"
                 app:layout_constraintBaseline_toBaselineOf="@id/quantity_string"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -90,7 +105,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
+                android:fontFamily="@font/nunito_sans_semibold"
+                android:textSize="16sp"
                 android:text="Details"
+                android:layout_marginStart="-4dp"
+                android:paddingHorizontal="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/quantity_string" />
@@ -101,6 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:text="Delivered"
+                android:fontFamily="@font/nunito_sans_semibold"
                 app:layout_constraintBaseline_toBaselineOf="@id/btn_order_details"
                 app:layout_constraintEnd_toEndOf="parent" />
 
