add product image to cart items

--- a/app/src/main/res/layout/item_my_cart.xml
+++ b/app/src/main/res/layout/item_my_cart.xml
@@ -25,7 +25,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:shapeAppearanceOverlay="@style/ImageViewRounded10" />
+                app:shapeAppearanceOverlay="@style/ImageViewRounded10"
+                android:scaleType="centerCrop"/>
 
             <TextView
                 android:id="@+id/tv_cart_product_name"
