--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -10,11 +11,357 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+
+        <ScrollView
+            android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Checkout"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/toolbar_checkout"
+                    style="@style/AppBarFurniture"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:title="@string/checkout"
+                    app:titleCentered="true" />
+
+                <TextView
+                    android:id="@+id/lbl_shipping_address"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/nunito_sans_semibold"
+                    android:text="@string/shipping_address"
+                    android:textColor="@color/text_secondary"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toStartOf="@id/btn_edit_address"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/toolbar_checkout" />
+
+                <Button
+                    android:id="@+id/btn_edit_address"
+                    style="@style/ButtonIconOnly"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/ripple_transparent_background"
+                    android:backgroundTint="@android:color/transparent"
+                    android:elevation="0dp"
+                    android:stateListAnimator="@null"
+                    app:icon="@drawable/ic_edit"
+                    app:layout_constraintBottom_toBottomOf="@id/lbl_shipping_address"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/lbl_shipping_address"
+                    app:rippleColor="@color/light_gray" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_shipping_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_shipping_address">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tv_shipping_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="15dp"
+                            android:fontFamily="@font/nunito_sans_bold"
+                            android:textColor="@color/font_black"
+                            android:textSize="18sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="Raul Vieira" />
+
+                        <View
+                            android:id="@+id/separator"
+                            android:layout_width="match_parent"
+                            android:layout_height="2dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/light_gray_5"
+                            app:layout_constraintTop_toBottomOf="@id/tv_shipping_name" />
+
+                        <TextView
+                            android:id="@+id/shipping_address"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="15dp"
+                            android:fontFamily="@font/nunito_sans"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/separator"
+                            tools:text="000 Main St, Toronto, 000 000, Canada xxxx xxxxx xxxx xxx" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/lbl_payment"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="30dp"
+                    android:fontFamily="@font/nunito_sans_semibold"
+                    android:text="@string/payment"
+                    android:textColor="@color/text_secondary"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toStartOf="@id/btn_edit_address"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/card_shipping_address" />
+
+                <Button
+                    android:id="@+id/btn_edit_payment"
+                    style="@style/ButtonIconOnly"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/ripple_transparent_background"
+                    android:backgroundTint="@android:color/transparent"
+                    android:elevation="0dp"
+                    android:stateListAnimator="@null"
+                    app:icon="@drawable/ic_edit"
+                    app:layout_constraintBottom_toBottomOf="@id/lbl_payment"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/lbl_payment"
+                    app:rippleColor="@color/light_gray" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_payment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_payment">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/img_credit_card"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_marginVertical="15dp"
+                            android:background="@color/primary"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/tv_credit_card_number"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/tv_credit_card_number"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:fontFamily="@font/nunito_sans_semibold"
+                            android:textColor="@color/primary"
+                            app:layout_constraintBottom_toBottomOf="@id/img_credit_card"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/img_credit_card"
+                            app:layout_constraintTop_toTopOf="@id/img_credit_card"
+                            tools:text="**** **** **** 3947" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/lbl_delivery_method"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="30dp"
+                    android:fontFamily="@font/nunito_sans_semibold"
+                    android:text="@string/delivery_method"
+                    android:textColor="@color/text_secondary"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toStartOf="@id/btn_edit_delivery_method"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/card_payment" />
+
+                <Button
+                    android:id="@+id/btn_edit_delivery_method"
+                    style="@style/ButtonIconOnly"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/ripple_transparent_background"
+                    android:backgroundTint="@android:color/transparent"
+                    android:elevation="0dp"
+                    android:stateListAnimator="@null"
+                    app:icon="@drawable/ic_edit"
+                    app:layout_constraintBottom_toBottomOf="@id/lbl_delivery_method"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/lbl_delivery_method"
+                    app:rippleColor="@color/light_gray" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_delivery"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_delivery_method">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/img_delivery_method"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_marginVertical="15dp"
+                            android:background="@color/primary"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/tv_delivery_estimated_date"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/tv_delivery_estimated_date"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:fontFamily="@font/nunito_sans_bold"
+                            android:textColor="@color/primary"
+                            android:textSize="14sp"
+                            app:layout_constraintBottom_toBottomOf="@id/img_delivery_method"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/img_delivery_method"
+                            app:layout_constraintTop_toTopOf="@id/img_delivery_method"
+                            tools:text="(2-3 days)" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="38dp"
+                    app:layout_constraintTop_toBottomOf="@id/card_delivery"
+                    android:layout_marginBottom="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/lbl_order"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="15dp"
+                            android:fontFamily="@font/nunito_sans"
+                            android:text="@string/order"
+                            android:textColor="@color/text_secondary"
+                            android:textSize="18sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/tv_order_total"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:fontFamily="@font/nunito_sans_semibold"
+                            android:textColor="@color/primary"
+                            android:textSize="18sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/lbl_order"
+                            tools:text="$ 95.00" />
+
+                        <TextView
+                            android:id="@+id/lbl_delivery"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="15dp"
+                            android:fontFamily="@font/nunito_sans"
+                            android:text="@string/delivery"
+                            android:textColor="@color/text_secondary"
+                            android:textSize="18sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/lbl_order" />
+
+                        <TextView
+                            android:id="@+id/tv_delivery_cost"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:fontFamily="@font/nunito_sans_semibold"
+                            android:textColor="@color/primary"
+                            android:textSize="18sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/lbl_delivery"
+                            tools:text="$ 5.00" />
+
+                        <TextView
+                            android:id="@+id/lbl_total"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="15dp"
+                            android:layout_marginStart="20dp"
+                            android:fontFamily="@font/nunito_sans"
+                            android:text="@string/total_"
+                            android:textColor="@color/text_secondary"
+                            android:textSize="18sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/lbl_delivery" />
+
+                        <TextView
+                            android:id="@+id/tv_total"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:fontFamily="@font/nunito_sans_bold"
+                            android:textColor="@color/primary"
+                            android:textSize="18sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/lbl_total"
+                            tools:text="$ 100.00" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+        <Button
+            android:id="@+id/btn_submit_order"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="30dp"
+            android:fontFamily="@font/nunito_sans_semibold"
+            android:paddingVertical="12dp"
+            android:text="@string/submit_order"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
