--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -111,10 +111,12 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/et_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunito_sans"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"
+                            android:text="@string/test_login"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -130,13 +132,23 @@
                         app:layout_constraintTop_toBottomOf="@id/email">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/et_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunito_sans"
                             android:inputType="textPassword"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"
+                            android:text="@string/test_password"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/test_account"
+                        app:layout_constraintTop_toBottomOf="@id/password"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="10dp"/>
 
                     <TextView
                         android:id="@+id/textView9"
